修复加密算法，加入打包交易时的验证

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cli-table": "^0.3.11",
     "elliptic": "^6.5.4",
+    "secp256k1": "^5.0.0",
     "vorpal": "^1.12.0"
   }
 }
